# computational_mathematics

./: .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
apps/Lab1/: CMakeLists.txt  main.cpp
headers/methods/: explicit_adams.hpp  explicit_base.hpp  explicit_bdf.hpp  explicit_rgkutta.hpp
src/: CMakeLists.txt
src/methods/: CMakeLists.txt  explicit_rgkutta.cpp
